--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -950,6 +950,23 @@
   number = {n/a}
 }
 
+@article{carterWithinCanopyExperimentalLeaf2018a,
+  title = {Within-{{Canopy Experimental Leaf Warming Induces Photosynthetic Decline Instead}} of {{Acclimation}} in {{Two Northern Hardwood Species}}},
+  author = {Carter, Kelsey R. and Cavaleri, Molly A.},
+  date = {2018},
+  journaltitle = {Front. For. Glob. Change},
+  volume = {1},
+  publisher = {{Frontiers}},
+  issn = {2624-893X},
+  doi = {10.3389/ffgc.2018.00011},
+  url = {https://www.frontiersin.org/articles/10.3389/ffgc.2018.00011/full},
+  urldate = {2021-07-13},
+  abstract = {Northern hardwood forests are experiencing higher temperatures and more extreme heat waves, potentially altering plant physiological processes. We implemented in-situ leaf-level warming along a vertical gradient within a mature forest canopy to investigate photosynthetic acclimation potential of two northern hardwood species, Acer saccharum and Tilia americana. After seven days of +3 °C warming, photosynthetic acclimation was assessed by measuring differences between heated and control photosynthetic rates (Aopt) at leaf optimum temperatures (Topt). We also measured the effects of warming and height on maximum rate of Rubisco carboxylation, stomatal conductance, transpiration, and leaf traits: leaf area, leaf mass per area, leaf nitrogen, and leaf water content. We found no evidence of photosynthetic acclimation for either species, but rather Aopt declined with warming overall. We found slight shifts in LMA and Narea, leaf traits associated with photosynthetic capacity, after one week of experimental warming. T. americana LMA and Narea was lower in the upper canopy heated leaves than in the control leaves, contributing a shift in Narea height distribution in the heated leaves. T. americana showed evidence of greater resiliency to warming, with greater thermoregulation, physiological plasticity, and evapotranspiration. As expected, Aopt of A. saccharum increased with height, but Aopt of T. americana was highest in the sub canopy, possibly due to constraints on leaf water balance and photosynthetic capacity in the upper canopy. Thus, models relying on canopy height or light environment may incorrectly estimate vertical variation of photosynthetic capacity. If these species are not able to acclimate to warmer temperatures, we could see alteration of plant carbon balance of these two key northern hardwood species.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\5CVK3TIH\\Carter and Cavaleri - 2018 - Within-Canopy Experimental Leaf Warming Induces Ph.pdf},
+  keywords = {Acer saccharum,Canopy,Experimental warming,leaf traits,Photosythesis,thermal acclimation,Tilia americana},
+  langid = {english}
+}
+
 @article{casalPhotoreceptorSignalingNetworks2013,
   title = {Photoreceptor {{Signaling Networks}} in {{Plant Responses}} to {{Shade}}},
   author = {Casal, Jorge J.},
@@ -2622,6 +2639,57 @@
   number = {3}
 }
 
+@article{hamerlynckLeaflevelResponsesLight1994,
+  title = {Leaf-Level Responses to Light and Temperature in Two Co-Occurring {{Quercus}} ({{Fagaceae}}) Species: Implications for Tree Distribution Patterns},
+  shorttitle = {Leaf-Level Responses to Light and Temperature in Two Co-Occurring {{Quercus}} ({{Fagaceae}}) Species},
+  author = {Hamerlynck, Erik P. and Knapp, Alan K.},
+  date = {1994-10-01},
+  journaltitle = {Forest Ecology and Management},
+  volume = {68},
+  pages = {149--159},
+  issn = {0378-1127},
+  doi = {10.1016/0378-1127(94)90042-6},
+  url = {https://www.sciencedirect.com/science/article/pii/0378112794900426},
+  urldate = {2021-07-13},
+  abstract = {Leaf-level responses to light environment (sun vs. shade) and high temperature were compared in two gallery forest oaks, bur oak (Quercus macrocarpa) and chinquapin oak (Quercus muehlenbergii). Our goal was to determine if species-specific differences in response to light or temperature could explain the distribution of these oaks in tallgrass prairie gallery forests. On the Konza Prairie Research Natural Area in NE Kansas (USA), bur oak is more abundant than chinquapin oak along lower reaches of streams where the forests are most productive and canopy closure is greatest. We hypothesized that bur oak is better able to acclimate physiologically to reduced light availability than chinquapin oak. Leaf level acclimation to low light in both oaks occurred through reduced photosynthetic light compensation points (PLC) (bur oak, 60.77 ± 3.02 μmol photons m−2 s−1 in sun leaves vs. 29.25 ± 0.29 photons m−2 s−1 in shade leaves; chinquapin oak, 49.47 ± 2.82 photons m−2 s−1 in sun leaves vs. 26.48 ± 1.74 photons m−2s−1 in shade leaves), resulting from nearly 50\% reductions in dark respiration and specific leaf mass in both species. Apparent quantum requirement (Qreq; mol photons mol−1 O2) did not differ between sun and shade leaves in either species, and only bur oak showed differences in sun and shade leaf shape. We also hypothesized that chinquapin oak, which is more abundant in exposed, upper stream reaches, has greater photosynthetic tolerance to the high temperatures characteristics of this region. The maximum temperature tolerances (Tmax) of these oaks were compared by measuring increases in chlorophyll fluorescence. For most of the growing season, Tmax in chinquapin oak was 2.0°C higher than in bur oak. Field measurements of leaf vs. air temperatures in seedlings and adult trees indicated that Tmax was more likely to be exceeded in bur than in chinquapin oak, particularly in seedlings exposed to high solar radiation loads. We concluded that differences in thermal tolerance, in addition to previously documented differences in water relations are important determinants of distributional patterns of these oaks within gallery forests.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3TCFHFC7\\0378112794900426.html},
+  keywords = {Gallery forest,Light acclimation,Photosynthesis,Tallgrass prairie,Temperature tolerance},
+  langid = {english},
+  number = {2}
+}
+
+@article{hamerlynckPhotosyntheticStomatalResponses1996,
+  title = {Photosynthetic and Stomatal Responses to High Temperature and Light in Two Oaks at the Western Limit of Their Range},
+  author = {Hamerlynck, Erik and Knapp, Alan K.},
+  date = {1996-06-01},
+  journaltitle = {Tree Physiology},
+  volume = {16},
+  pages = {557--565},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/16.6.557},
+  url = {https://doi.org/10.1093/treephys/16.6.557},
+  urldate = {2021-07-13},
+  abstract = {Bur oak (Quercus macrocarpa Michx.) and chinquapin oak (Q. muehlenbergii Engl.) leaves were exposed to high temperatures at various photosynthetic photon flux densities under laboratory conditions to determine if species-specific responses to these factors were consistent with the distribution of these oaks in gallery forests in the tallgrass prairies of northeastern Kansas, USA. Measurements of the ratio of chlorophyll fluorescence decrease, Rfd, indicated that chinquapin oak maintained greater photosynthetic capacity than bur oak across all tested combinations of irradiance (100, 400, 700 and 1000 μmol m−2 s−1) and temperature (40, 42, 44, 46 and 48 °C). In both oak species, manipulation of leaf temperature to about 47 °C for 45 min in the field led to a 45\% decrease in carbon assimilation up to one week after the heat treatment, and to sharp reductions in stomatal conductance. Photosynthetic recovery patterns indicated that bur oak took longer to recover from heat stress than chinquapin oak, suggesting that heat stress may be important in determining distribution patterns of these oak species. Based on a comparison of the results with data from other forest species, we conclude that the photosynthetic temperature tolerances of bur oak and chinquapin oaks facilitate their dominance at the western limit of the eastern deciduous forest.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\A5EBZG33\\Hamerlynck and Knapp - 1996 - Photosynthetic and stomatal responses to high temp.pdf;C\:\\Users\\Me\\Zotero\\storage\\MCY3544L\\1719022.html},
+  number = {6}
+}
+
+@article{hamerlynckPhotosyntheticStomatalResponses1996a,
+  title = {Photosynthetic and Stomatal Responses to High Temperature and Light in Two Oaks at the Western Limit of Their Range},
+  author = {Hamerlynck, Erik and Knapp, Alan K.},
+  date = {1996-06-01},
+  journaltitle = {Tree Physiology},
+  volume = {16},
+  pages = {557--565},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/16.6.557},
+  url = {https://doi.org/10.1093/treephys/16.6.557},
+  urldate = {2021-07-13},
+  abstract = {Bur oak (Quercus macrocarpa Michx.) and chinquapin oak (Q. muehlenbergii Engl.) leaves were exposed to high temperatures at various photosynthetic photon flux densities under laboratory conditions to determine if species-specific responses to these factors were consistent with the distribution of these oaks in gallery forests in the tallgrass prairies of northeastern Kansas, USA. Measurements of the ratio of chlorophyll fluorescence decrease, Rfd, indicated that chinquapin oak maintained greater photosynthetic capacity than bur oak across all tested combinations of irradiance (100, 400, 700 and 1000 μmol m−2 s−1) and temperature (40, 42, 44, 46 and 48 °C). In both oak species, manipulation of leaf temperature to about 47 °C for 45 min in the field led to a 45\% decrease in carbon assimilation up to one week after the heat treatment, and to sharp reductions in stomatal conductance. Photosynthetic recovery patterns indicated that bur oak took longer to recover from heat stress than chinquapin oak, suggesting that heat stress may be important in determining distribution patterns of these oak species. Based on a comparison of the results with data from other forest species, we conclude that the photosynthetic temperature tolerances of bur oak and chinquapin oaks facilitate their dominance at the western limit of the eastern deciduous forest.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\4TQA6KV5\\Hamerlynck and Knapp - 1996 - Photosynthetic and stomatal responses to high temp.pdf;C\:\\Users\\Me\\Zotero\\storage\\QSAFCCHA\\1719022.html},
+  number = {6}
+}
+
 @article{hansenVariationPigmentComposition2002a,
   title = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest: A Comparative Study on Deciduous Tree Species Differing in Shade Tolerance},
   shorttitle = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest},
@@ -2708,6 +2776,21 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\JKG8AUNC\\Harley et al. - 1997 - Environmental controls over isoprene emission in d.pdf},
   langid = {english},
   number = {11}
+}
+
+@article{harrisChangesLeafProperties2013a,
+  title = {Changes in Leaf Properties across an Elevation Gradient in the {{Luquillo Mountains}}, {{Puerto Rico}}},
+  author = {Harris, Nancy L. and Medina, Ernesto},
+  date = {2013},
+  journaltitle = {Ecological Bulletins},
+  pages = {169--180},
+  publisher = {{Oikos Editorial Office}},
+  issn = {0346-6868},
+  abstract = {Few data exist on the leaf physiological characteristics of tropical tree species. Quantifying variation in leaf CO2 exchange within a forest canopy improves our understanding of forest carbon cycling, especially if this quantification is done in such a way that explores leaf response to environmental variables. The main goal of this study was to investigate how leaf structural and functional properties change in response to the changing environmental conditions that occur both within a tree canopy and along a gradient of elevation in a subtropical forest ecosystem in Puerto Rico. We employed novel field techniques that allowed measurement of leaf CO2 exchange in different canopy positions as well as over a large geographic extent. Our results indicate that leaf properties such as leaf metabolic rates [light-saturated net carbon assimilation (Amax) and dark respiration (Rd) rates], leaf chemistry (chlorophyll and nitrogen concentration), and leaf structure [leaf mass per area (LMA)] differed significantly among species of varying successional status, between leaf positions within a tree, and spatially across the elevation gradient. Data presented here contribute to the worldwide ‘leaf economics’ database and will be useful to those interested in changes in canopy carbon sequestration across gradients.},
+  eprint = {26796812},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ZDB3VEDX\\Harris and Medina - 2013 - Changes in leaf properties across an elevation gra.pdf},
+  number = {54}
 }
 
 @article{havauxTemperaturedependentAdjustmentThermal1996,
@@ -4816,6 +4899,25 @@
   keywords = {Dendrometer bands,forest ecology,intra-annual growth,logistic function,maximum likelihood,optimization},
   langid = {english},
   number = {2}
+}
+
+@article{meakemRoleTreeSize2018,
+  title = {Role of Tree Size in Moist Tropical Forest Carbon Cycling and Water Deficit Responses},
+  author = {Meakem, Victoria and Tepley, Alan J. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Muller-Landau, Helene C. and Wright, S. Joseph and Hubbell, Stephen P. and Condit, Richard and Anderson-Teixeira, Kristina J.},
+  date = {2018},
+  journaltitle = {New Phytologist},
+  volume = {219},
+  pages = {947--958},
+  issn = {1469-8137},
+  doi = {10.1111/nph.14633},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.14633},
+  urldate = {2021-07-13},
+  abstract = {Drought disproportionately affects larger trees in tropical forests, but implications for forest composition and carbon (C) cycling in relation to dry season intensity remain poorly understood. In order to characterize how C cycling is shaped by tree size and drought adaptations and how these patterns relate to spatial and temporal variation in water deficit, we analyze data from three forest dynamics plots spanning a moisture gradient in Panama that have experienced El Niño droughts. At all sites, aboveground C cycle contributions peaked below 50-cm stem diameter, with stems ≥ 50 cm accounting for on average 59\% of live aboveground biomass, 45\% of woody productivity and 49\% of woody mortality. The dominance of drought-avoidance strategies increased interactively with stem diameter and dry season intensity. Although size-related C cycle contributions did not vary systematically across the moisture gradient under nondrought conditions, woody mortality of larger trees was disproportionately elevated under El Niño drought stress. Thus, large ({$>$} 50 cm) stems, which strongly mediate but do not necessarily dominate C cycling, have drought adaptations that compensate for their more challenging hydraulic environment, particularly in drier climates. However, these adaptations do not fully buffer the effects of severe drought, and increased large tree mortality dominates ecosystem-level drought responses.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.14633},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MKFRFE5A\\Meakem et al. - 2018 - Role of tree size in moist tropical forest carbon .pdf;C\:\\Users\\Me\\Zotero\\storage\\XI3NR64B\\nph.html},
+  keywords = {biomass,drought adaptation,El Niño,tree mortality,tree size,tropical moist forest,woody productivity},
+  langid = {english},
+  number = {3}
 }
 
 @article{mediavillaFoliarPlasticityRelated2019a,
@@ -7649,6 +7751,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\P7D4M8QU\\a558d3a0c6e79a4a2af0809a800a1e25.pdf},
   langid = {english},
   type = {preprint}
+}
+
+@article{slotLeafHeatTolerance2021,
+  title = {Leaf Heat Tolerance of 147 Tropical Forest Species Varies with Elevation and Leaf Functional Traits, but Not with Phylogeny},
+  author = {Slot, Martijn and Cala, Daniela and Aranda, Jorge and Virgo, Aurelio and Michaletz, Sean T. and Winter, Klaus},
+  date = {2021-07},
+  journaltitle = {Plant Cell Environ},
+  volume = {44},
+  pages = {2414--2427},
+  issn = {0140-7791, 1365-3040},
+  doi = {10.1111/pce.14060},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/pce.14060},
+  urldate = {2021-07-13},
+  abstract = {Exceeding thermal thresholds causes irreversible damage and ultimately loss of leaves. The lowland tropics are among the warmest forested biomes, but little is known about heat tolerance of tropical forest plants. We surveyed leaf heat tolerance of sun-exposed leaves from 147 tropical lowland and pre-montane forest species by determining the temperatures at which potential photosystem II efficiency based on chlorophyll a fluorescence started to decrease (TCrit) and had decreased by 50\% (T50). TCrit averaged 46.7 C (5th–95th percentile: 43.5 C–49.7 C) and T50 averaged 49.9 C (47.8 C–52.5 C). Heat tolerance partially adjusted to site temperature; TCrit and T50 decreased with elevation by 0.40 C and 0.26 C per 100 m, respectively, while mean annual temperature decreased by 0.63 C per 100 m. The phylogenetic signal in heat tolerance was weak, suggesting that heat tolerance is more strongly controlled by environment than by evolutionary legacies. TCrit increased with the estimated thermal time constant of the leaves, indicating that species with thermally buffered leaves maintain higher heat tolerance. Among lowland species, T50 increased with leaf mass per area, suggesting that in species with structurally more costly leaves the risk of leaf loss during hot spells is reduced. These results provide insight in variation in heat tolerance at local and regional scales.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\J4ZMEVRE\\Slot et al. - 2021 - Leaf heat tolerance of 147 tropical forest species.pdf},
+  langid = {english},
+  number = {7}
 }
 
 @article{slotPhotosyntheticHeatTolerance2019a,
